--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -3,7 +3,7 @@ terraform {
 
   backend "s3" {
     bucket         = "{{state_file_bucket}}"
-    key            = "terraform/dataworks/github/aws-concourse.tfstate"
+    key            = "terraform/dataworks/aws-concourse.tfstate"
     region         = "{{state_file_region}}"
     encrypt        = true
     kms_key_id     = "arn:aws:kms:eu-west-1:{{state_file_account}}:key/{{state_file_kms_key}}"
@@ -11,6 +11,40 @@ terraform {
   }
 }
 
+variable "assume_role" {
+  default = "ci"
+}
+
+variable "region" {
+  default = "eu-west-2"
+}
+
 provider "aws" {
-  region = "eu-west-2"
+  version = "~> 2.45.0"
+  region  = var.region
+
+  assume_role {
+    role_arn = "arn:aws:iam::${lookup(local.account, local.environment)}:role/${var.assume_role}"
+  }
+}
+
+// Get AWS Account ID for credentials in use
+data "aws_caller_identity" "current" {}
+
+data "aws_region" "current" {}
+data "aws_availability_zones" "available" {}
+
+locals {
+  account = { {% for account in accounts %}
+    {{account}}{% endfor %}
+  }
+}
+
+locals {
+  mgmt_account_mapping = {
+    management-dev = ["development", "qa", "integration"]
+    management     = ["preprod", "production"]
+  }
+
+  environment = terraform.workspace == "default" ? "management-dev" : terraform.workspace
 }
