--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -1,5 +1,5 @@
 terraform {
-  required_version = "~> 0.12"
+  required_version = "{{terraform_12_version}}"
 
   backend "s3" {
     bucket         = "{{state_file_bucket}}"
