DW-3378 Rename tags; Add tags to IAM roles (#31)
* DW-3378 Rename tags; Add tags to IAM roles
* fmt
* fmt

--- a/terraform/deploy/terraform.tfvars.j2
+++ b/terraform/deploy/terraform.tfvars.j2
@@ -3,10 +3,9 @@ tags = {
   Name        = "concourse"
   Environment = "development"
   Project     = "ci"
-  environment = "dev"
-  application = "aws-concourse"
-  created-by  = "terraform"
-  owner       = "dataworks platform"
+  Application = "aws-concourse"
+  CreatedBy   = "terraform"
+  Owner       = "dataworks platform"
 }
 parent_domain_name    = "ci-dw-poc.co.uk"
 whitelist_cidr_blocks = ["{{cidr_block['ucfs_network']}}"]
