move `tags` from `var` to `locals` to allow environment lookup
Signed-off-by: Daniel Hill <danhill@digital.uc.dwp.gov.uk>

--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -47,4 +47,15 @@ locals {
   }
 
   environment = terraform.workspace == "default" ? "management-dev" : terraform.workspace
+
+  tags = {
+  {% for key, value in common_tags.items() %}
+    {{key}} = "{{value}}"{% endfor %}
+    Name         = "concourse"
+    Environment  = local.environment
+    Project      = "ci"
+    Application  = "aws-concourse"
+    Persistence  = "Ignore"
+    AutoShutdown = "False"
+  }
 }
