--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -35,8 +35,8 @@ data "aws_region" "current" {}
 data "aws_availability_zones" "available" {}
 
 locals {
-  account = { {% for account in accounts %}
-    {{account}}{% endfor %}
+  account = { {% for key, value in accounts.items() %}
+    {{key}} = "{{value}}"{% endfor %}
   }
 }
 
