simplify vpc config variable, only config set was cidr block at deploy level, pass vpc_cidr_block by looking up env in locals make all cidr blocks available in locals (within terraform.tf)
Signed-off-by: Daniel Hill <danhill@digital.uc.dwp.gov.uk>

--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -58,4 +58,12 @@ locals {
     Persistence  = "Ignore"
     AutoShutdown = "False"
   }
+
+  cidr_block = {
+  {% for environment, ranges in cidr_block.items() %}
+      {{ environment }} = {
+        {% for key, value in ranges.items() %}
+          {{ key }} = "{{ value }}"{% endfor %}
+      } {% endfor %}
+  }
 }
