--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -6,7 +6,7 @@ terraform {
     key            = "terraform/dataworks/aws-concourse.tfstate"
     region         = "{{state_file_region}}"
     encrypt        = true
-    kms_key_id     = "arn:aws:kms:eu-west-1:{{state_file_account}}:key/{{state_file_kms_key}}"
+    kms_key_id     = "arn:aws:kms:{{state_file_region}}:{{state_file_account}}:key/{{state_file_kms_key}}"
     dynamodb_table = "remote_state_locks"
   }
 }
