use local map to alter parent domain name for working in mgt-dev
Signed-off-by: Daniel Hill <danhill@digital.uc.dwp.gov.uk>

--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -60,6 +60,11 @@ locals {
     management     = ["preprod", "production"]
   }
 
+  parent_domain_name = {
+    management-dev = "wip.${var.parent_domain_name}"
+    management = var.parent_domain_name
+  }
+
   environment = terraform.workspace == "default" ? "management-dev" : terraform.workspace
 
   tags = {
