--- a/terraform/deploy/terraform.tfvars.j2
+++ b/terraform/deploy/terraform.tfvars.j2
@@ -1,3 +1,3 @@
 assume_role = "administrator"
-parent_domain_name    = "wip.{{dataworks_domain_name}}"
+parent_domain_name    = "{{dataworks_domain_name}}"
 whitelist_cidr_blocks = ["{{ucfs['team_cidr_block']}}"]
