--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -1,16 +1,88 @@
 terraform {
-  required_version = "~> 0.12"
+  required_version = "{{terraform_12_version}}"
 
   backend "s3" {
     bucket         = "{{state_file_bucket}}"
-    key            = "terraform/dataworks/github/dataworks-github-config.tfstate"
+    key            = "terraform/dataworks/aws-concourse.tfstate"
     region         = "{{state_file_region}}"
     encrypt        = true
-    kms_key_id     = "arn:aws:kms:eu-west-1:{{state_file_account}}:key/{{state_file_kms_key}}"
+    kms_key_id     = "arn:aws:kms:{{state_file_region}}:{{state_file_account}}:key/{{state_file_kms_key}}"
     dynamodb_table = "remote_state_locks"
   }
 }
 
+data "terraform_remote_state" "internet_egress" {
+  backend   = "s3"
+  workspace = terraform.workspace
+
+  config = {
+    bucket         = "{{state_file_bucket}}"
+    key            = "terraform/dataworks/aws-internet-egress.tfstate"
+    region         = "{{state_file_region}}"
+    encrypt        = true
+    kms_key_id     = "arn:aws:kms:{{state_file_region}}:{{state_file_account}}:key/{{state_file_kms_key}}"
+    dynamodb_table = "remote_state_locks"
+  }
+}
+
+variable "assume_role" {
+  default = "ci"
+}
+
+variable "region" {
+  default = "eu-west-2"
+}
+
 provider "aws" {
-  region = "eu-west-2"
+  version = "~> 2.45.0"
+  region  = var.region
+
+  assume_role {
+    role_arn = "arn:aws:iam::${lookup(local.account, local.environment)}:role/${var.assume_role}"
+  }
+}
+
+// Get AWS Account ID for credentials in use
+data "aws_caller_identity" "current" {}
+
+data "aws_region" "current" {}
+data "aws_availability_zones" "available" {}
+
+locals {
+  account = { {% for key, value in accounts.items() %}
+    {{key}} = "{{value}}"{% endfor %}
+  }
+}
+
+locals {
+  mgmt_account_mapping = {
+    management-dev = ["development", "qa", "integration"]
+    management     = ["preprod", "production"]
+  }
+
+  parent_domain_name = {
+    management-dev = "wip.${var.parent_domain_name}"
+    management = var.parent_domain_name
+  }
+
+  environment = terraform.workspace == "default" ? "management-dev" : terraform.workspace
+
+  tags = {
+  {% for key, value in common_tags.items() %}
+    {{key}} = "{{value}}"{% endfor %}
+    Name         = "concourse"
+    Environment  = local.environment
+    Project      = "ci"
+    Application  = "aws-concourse"
+    Persistence  = "Ignore"
+    AutoShutdown = "False"
+  }
+
+  cidr_block = {
+  {% for environment, ranges in cidr_block.items() %}
+      {{ environment }} = {
+        {% for key, value in ranges.items() %}
+          {{ key }} = "{{ value }}"{% endfor %}
+      } {% endfor %}
+  }
 }
