DW-3346: Add VPC Peering connection to UCFS GitHub

--- a/terraform/deploy/terraform.tfvars.j2
+++ b/terraform/deploy/terraform.tfvars.j2
@@ -3,3 +3,8 @@ parent_domain_name    = "{{dataworks_domain_name}}"
 whitelist_cidr_blocks = ["{{ucfs['team_cidr_block']}}"]
 ami_filter_values = ["dw-hardened-ami-*"]
 ami_owners        = ["{{accounts['management']}}"]
+
+github_vpc = {
+{%- for k, v in ucfs['github']['vpc'].items() %}
+  {{ k }} = "{{ v }}"{% endfor %}
+}
