--- a/terraform/deploy/terraform.tfvars.j2
+++ b/terraform/deploy/terraform.tfvars.j2
@@ -8,3 +8,8 @@ github_vpc = {
 {%- for k, v in ucfs['github']['vpc'].items() %}
   {{ k }} = "{{ v }}"{% endfor %}
 }
+
+packer_egress_test_zip = {
+  base_path = "../../../packer-egress-test-release"
+  version   = "0.0.10"
+}
