Convert CI pipeline jobs to Jinja templates
Some jobs now require sensitive info, so need to be run through a similar
process to the terraform config.

--- a/ci/jobs/management.yml.j2
+++ b/ci/jobs/management.yml.j2
@@ -19,6 +19,10 @@ jobs:
     params:
       TF_WORKSPACE: management
   - .: (( inject meta.plan.concourse-smoke-tests ))
+  - .: (( inject meta.plan.create-aws-profiles ))
+    config:
+      params:
+        AWS_ACC: "{{accounts['management']}}"
   - .: (( inject meta.plan.generate-negative-proxy-test-manifest ))
   - .: (( inject meta.plan.generate-positive-proxy-test-manifest ))
   - .: (( inject meta.plan.run-positive-proxy-test ))
