--- a/ci/jobs/management-dev.yml.j2
+++ b/ci/jobs/management-dev.yml.j2
@@ -9,6 +9,10 @@ jobs:
   - .: (( inject meta.plan.terraform-plan ))
   - .: (( inject meta.plan.terraform-output ))
   - .: (( inject meta.plan.concourse-smoke-tests ))
+  - .: (( inject meta.plan.create-aws-profiles ))
+    config:
+      params:
+        AWS_ACC: "{{accounts['management-dev']}}"
   - .: (( inject meta.plan.generate-negative-proxy-test-manifest ))
   - .: (( inject meta.plan.generate-positive-proxy-test-manifest ))
   - .: (( inject meta.plan.run-positive-proxy-test ))
