--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -94,5 +94,5 @@ locals {
       } {% endfor %}
   }
 
-  cognito_domain = local.mgmt_account_mapping[local.environment] == "management" ? "dataworks" : "dataworks-dev"
+  cognito_domain = local.mgmt_account_mapping[local.environment] == "management" ? "concourse-dataworks" : "concourse-dataworks-dev"
 }
