--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -55,11 +55,6 @@ locals {
 }
 
 locals {
-  mgmt_account_mapping = {
-    management-dev = ["development", "qa", "integration"]
-    management     = ["preprod", "production"]
-  }
-
   parent_domain_name = {
     management-dev = "wip.${var.parent_domain_name}"
     management = var.parent_domain_name
@@ -94,5 +89,5 @@ locals {
       } {% endfor %}
   }
 
-  cognito_domain = local.mgmt_account_mapping[local.environment] == "management" ? "concourse-dataworks" : "concourse-dataworks-dev"
+  cognito_domain = local.environment == "management" ? "concourse-dataworks" : "concourse-dataworks-dev"
 }
