Migrated ci user policies from identity
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -89,5 +89,10 @@ locals {
       } {% endfor %}
   }
 
+  remote_state = {
+    bucket_arn = "arn:aws:s3:::{{state_file_bucket}}"
+    dynamo_arn = "arn:aws:dynamodb:{{state_file_region}}:{{state_file_account}}:table/remote_state_locks"
+  }
+
   cognito_domain = local.environment == "management" ? "concourse-dataworks" : "concourse-dataworks-dev"
 }
