--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -62,6 +62,14 @@ data "aws_caller_identity" "current" {}
 data "aws_region" "current" {}
 data "aws_availability_zones" "available" {}
 
+data "http" "github" {
+  url = "https://api.github.com/meta"
+}
+
+locals {
+  github_metadata = jsondecode(data.http.github.body)
+}
+
 locals {
   account = { {% for key, value in accounts.items() %}
     {{key}} = "{{value}}"{% endfor %}
