--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -25,6 +25,20 @@ data "terraform_remote_state" "internet_egress" {
   }
 }
 
+data "terraform_remote_state" "security-tools" {
+  backend = "s3"
+  workspace = local.environment
+
+  config = {
+    bucket         = "{{state_file_bucket}}"
+    key            = "terraform/dataworks/aws-security-tools.tfstate"
+    region         = "{{state_file_region}}"
+    encrypt        = true
+    kms_key_id     = "arn:aws:kms:{{state_file_region}}:{{state_file_account}}:key/{{state_file_kms_key}}"
+    dynamodb_table = "remote_state_locks"
+  }
+}
+
 variable "assume_role" {
   default = "ci"
 }
@@ -47,6 +61,14 @@ data "aws_caller_identity" "current" {}
 
 data "aws_region" "current" {}
 data "aws_availability_zones" "available" {}
+
+data "http" "github" {
+  url = "https://api.github.com/meta"
+}
+
+locals {
+  github_metadata = jsondecode(data.http.github.body)
+}
 
 locals {
   account = { {% for key, value in accounts.items() %}
