--- a/ci/jobs/management.yml.j2
+++ b/ci/jobs/management.yml.j2
@@ -23,7 +23,4 @@ jobs:
     config:
       params:
         AWS_ACC: "{{accounts['management']}}"
-  - .: (( inject meta.plan.generate-negative-proxy-test-manifest ))
-  - .: (( inject meta.plan.generate-positive-proxy-test-manifest ))
-  - .: (( inject meta.plan.run-positive-proxy-test ))
-  - .: (( inject meta.plan.run-negative-proxy-test ))
+  - .: (( inject meta.plan.proxy-test ))
