List once, pass twice
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -112,4 +112,12 @@ locals {
   }
 
   cognito_domain = local.environment == "management" ? "concourse-dataworks" : "concourse-dataworks-dev"
+
+  no_proxy    = "169.254.169.254,${join(",", formatlist("%s.%s", local.endpoint_services, local.amazon_region_domain))},${local.enterprise_github_url}"
+
+  enterprise_github_certs = [
+    "s3://dw-${local.environment}-public-certificates/ca_certificates/ucfs/ucd_ca.pem",
+    "s3://dw-${local.environment}-public-certificates/ca_certificates/ucfs/ucd_clientca.pem"
+  ]
+  
 }
