--- a/ci/jobs/reboot-worker-management.yml.j2
+++ b/ci/jobs/reboot-worker-management.yml.j2
@@ -3,6 +3,10 @@ jobs:
   plan:
   - get: aws-concourse
     trigger: false
+  - .: (( inject meta.plan.create-aws-profiles ))
+    config:
+      params:
+        AWS_ACC: "{{accounts['management']}}"
   - .: (( inject meta.plan.reboot-worker-nodes ))
     config:
       params:
