--- a/terraform/deploy/terraform.tfvars.j2
+++ b/terraform/deploy/terraform.tfvars.j2
@@ -1,7 +1,7 @@
 assume_role = "administrator"
 parent_domain_name    = "{{dataworks_domain_name}}"
 whitelist_cidr_blocks = ["{{ucfs['team_cidr_block']}}"]
-ami_filter_values = ["dw-hardened-ami-*"]
+ami_filter_values = ["dw-concourse-ami-*"]
 ami_owners        = ["{{accounts['management']}}"]
 
 github_vpc = {
