--- a/ci/jobs/reboot-worker-management.yml.j2
+++ b/ci/jobs/reboot-worker-management.yml.j2
@@ -7,4 +7,12 @@ jobs:
     config:
       params:
         AWS_ACC: "{{accounts['management']}}"
+  - .: (( inject meta.plan.fetch-credentials ))
+    config:
+      params:
+        USERNAME_KEY: "/ci/0df691ef-5c06-e638-ae85-d14bb1e0703f-user"
+        PASSWORD_KEY: "/ci/0df691ef-5c06-e638-ae85-d14bb1e0703f-password"
   - .: (( inject meta.plan.reboot-worker-nodes ))
+    config:
+      params:
+        CONCOURSE_URI: "https://ci.dataworks.dwp.gov.uk/"
