--- a/ci/jobs/mgmt-user-admin.yml.j2
+++ b/ci/jobs/mgmt-user-admin.yml.j2
@@ -1,10 +1,13 @@
 jobs:
-- name: management-dev-user-creation
+- name: management-user-admin
   plan:
   - get: aws-concourse-users
+    passed:
+      - management-dev-user-creation
     trigger: true
   - .: (( inject meta.plan.create-aws-profiles ))
     config:
       params:
-        AWS_ACC: "{{accounts['management-dev']}}"
+        AWS_ACC: "{{accounts['management']}}"
   - .: (( inject meta.plan.create-users ))
+  - .: (( inject meta.plan.delete-users ))
