--- a/ci/jobs/mgmt-dev-user-admin.yml.j2
+++ b/ci/jobs/mgmt-dev-user-admin.yml.j2
@@ -10,5 +10,5 @@ jobs:
   - .: (( inject meta.plan.create-users ))
     config:
       params:
-        MESSAGE_ACTION: SUPRESS
+        MESSAGE_ACTION: SUPPRESS
   - .: (( inject meta.plan.delete-users ))
