Notify via email with OTP. Only Notify when set.
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/ci/jobs/mgmt-dev-user-admin.yml.j2
+++ b/ci/jobs/mgmt-dev-user-admin.yml.j2
@@ -10,5 +10,5 @@ jobs:
   - .: (( inject meta.plan.create-users ))
     config:
       params:
-        MESSAGE_ACTION: SUPPRESS
+        NOTIFY: false
   - .: (( inject meta.plan.delete-users ))
