Added html formatting to email template
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/terraform/modules/cognito/templates/email_message.html
+++ b/terraform/modules/cognito/templates/email_message.html
@@ -1,14 +1,14 @@
-Hello,
-
+Hello,<br>
+<br>
 You have been granted access to a DWP DataWorks service. This email contains your username and temporary password. This
-password will expire 24 hours from the time this email was sent.
-
-Username: {username}
-Password: {####}
-
+password will expire 24 hours from the time this email was sent.<br>
+<br>
+Username: {username}<br>
+Password: {####}<br>
+<br>
 For security reasons, no more information about how or where to use these details, is contained within this email and
-your DWP DataWorks contact should provide this information directly.
-
-Thank you,
-
-DWP DataWorks Team
+your DWP DataWorks contact should provide this information directly.<br>
+<br>
+Thank you,<br>
+<br>
+DWP DataWorks Team<br>
