update missed reference in template file
Signed-off-by: danhill <danhill@digital.uc.dwp.gov.uk>

--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -151,7 +151,7 @@ locals {
 
   cognito_domain = local.environment == "management" ? "concourse-dataworks" : "concourse-dataworks-dev"
 
-  no_proxy = "${join(",", module.vpc.outputs.no_proxy_list)},${local.enterprise_github_url}"
+  no_proxy = "${join(",", module.vpc.outputs.no_proxy_list)},${var.concourse_web_config.enterprise_github_url}"
 
   enterprise_github_certs = [
     "s3://dw-${local.environment}-public-certificates/ca_certificates/ucfs/ucd_ca.pem",
