add role for retrieving secrets during bootstrap
Signed-off-by: danhill <danhill@digital.uc.dwp.gov.uk>

--- a/ci/jobs/management.yml.j2
+++ b/ci/jobs/management.yml.j2
@@ -8,6 +8,8 @@ jobs:
     passed:
     - management-dev
   - .: (( inject meta.plan.terraform-bootstrap ))
+    params:
+      AWS_SECRETS_ROLE: arn:aws:iam::((aws_account.management)):role/ci
   - .: (( inject meta.plan.terraform-apply ))
     params:
       TF_WORKSPACE: management
