Readying repo for migration to GHA (#188)
* push workflow for testing

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* bootstrap via role

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* Fixed Param

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* rm session-name test

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* restore name

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* Remove env var

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* DEBUG

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* run terraform as user, not role

Signed-off-by: danhill <danhill@digital.uc.dwp.gov.uk>

* remove the assume role set in tfvars

Signed-off-by: danhill <danhill@digital.uc.dwp.gov.uk>

* specify role for GHA

Signed-off-by: danhill <danhill@digital.uc.dwp.gov.uk>

* plan against mgmt-dev (no access to mgmt yet)

Signed-off-by: danhill <danhill@digital.uc.dwp.gov.uk>

* set role name (secret was an arn)

Signed-off-by: danhill <danhill@digital.uc.dwp.gov.uk>

* prevent job succeeding if the plan fails

Signed-off-by: danhill <danhill@digital.uc.dwp.gov.uk>

* turn off debug logging

Signed-off-by: danhill <danhill@digital.uc.dwp.gov.uk>

* put this back, it was a mistake to remove

Signed-off-by: danhill <danhill@digital.uc.dwp.gov.uk>

* push workflow for testing

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* bootstrap via role

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* Fixed Param

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* rm session-name test

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* restore name

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* R

--- a/ci/jobs/management.yml.j2
+++ b/ci/jobs/management.yml.j2
@@ -5,10 +5,11 @@ jobs:
     passed:
     - management-dev
     trigger: true
-  - get: packer-egress-test-release
     passed:
     - management-dev
   - .: (( inject meta.plan.terraform-bootstrap ))
+    params:
+      AWS_SECRETS_ROLE: arn:aws:iam::((aws_account.management)):role/ci
   - .: (( inject meta.plan.terraform-apply ))
     params:
       TF_WORKSPACE: management
@@ -23,4 +24,3 @@ jobs:
     config:
       params:
         AWS_ACC: "{{accounts['management']}}"
-  - .: (( inject meta.plan.proxy-test ))
