--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -153,6 +153,10 @@ locals {
 
   no_proxy = "${join(",", module.vpc.outputs.no_proxy_list)},${var.concourse_web_config.enterprise_github_url}"
 
+  ami_filter_values = local.environment == "management" ? ["dw-al2-concourse-ami-*"] : ["pr-dw-al2-concourse-ami-*"]
+
+  ami_owners = [local.account[local.environment]]
+
   enterprise_github_certs = [
     "s3://dw-${local.environment}-public-certificates/ca_certificates/ucfs/ucd_ca.pem",
     "s3://dw-${local.environment}-public-certificates/ca_certificates/ucfs/ucd_clientca.pem"
