adds password reset ability for users
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/ci/jobs/mgmt-dev-user-admin.yml.j2
+++ b/ci/jobs/mgmt-dev-user-admin.yml.j2
@@ -9,3 +9,4 @@ jobs:
         AWS_ACC: "{{accounts['management-dev']}}"
   - .: (( inject meta.plan.create-users ))
   - .: (( inject meta.plan.delete-users ))
+  - .: (( inject meta.plan.admin-reset-password ))
