--- a/ci/jobs/mgmt-user-admin.yml.j2
+++ b/ci/jobs/mgmt-user-admin.yml.j2
@@ -11,3 +11,4 @@ jobs:
         AWS_ACC: "{{accounts['management']}}"
   - .: (( inject meta.plan.create-users ))
   - .: (( inject meta.plan.delete-users ))
+  - .: (( inject meta.plan.admin-reset-password ))
