Revert "uplift to tf 13 (#249)"
This reverts commit 756cf0ce8bbb7a2a9bc2683e371c7fd565c6d95a.

--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -1,5 +1,5 @@
 terraform {
-  required_version = "0.13.4"
+  required_version = "{{terraform_12_version}}"
   required_providers {
     random = "~> 2.0"
     tls    = "~> 2.0"
