--- a/terraform/deploy/terraform.tfvars.j2
+++ b/terraform/deploy/terraform.tfvars.j2
@@ -1,6 +1,9 @@
 assume_role = "administrator"
 parent_domain_name    = "{{dataworks_domain_name}}"
-whitelist_cidr_blocks = ["{{ucfs['team_cidr_block']}}"]
+whitelist_cidr_blocks    = [{% set doiranges = doi["cidr_blocks"].split(',') %}
+  {% for cidr in doiranges %}"{{ cidr }}",
+  {% endfor %}"{{ucfs["team_cidr_block"]}}"
+]
 
 concourse_web_config = {
   database_username = "{{database_username}}"
