--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -34,11 +34,11 @@ data "terraform_remote_state" "dataworks_cognito" {
   workspace = terraform.workspace
 
   config = {
-    bucket         = "{{terraform.state_file_bucket}}"
+    bucket         = "{{state_file_bucket}}"
     key            = "terraform/dataworks/dataworks-cognito.tfstate"
-    region         = "{{terraform.state_file_region}}"
+    region         = "{{state_file_region}}"
     encrypt        = true
-    kms_key_id     = "arn:aws:kms:{{terraform.state_file_region}}:{{terraform.state_file_account}}:key/{{terraform.state_file_kms_key}}"
+    kms_key_id     = "arn:aws:kms:{{state_file_region}}:{{state_file_account}}:key/{{state_file_kms_key}}"
     dynamodb_table = "remote_state_locks"
   }
 }
