--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -1,5 +1,5 @@
 terraform {
-  required_version = "0.13.4"
+  required_version = "{{terraform_12_version}}"
   required_providers {
     random = "~> 2.0"
     tls    = "~> 2.0"
@@ -170,8 +170,4 @@ locals {
     "s3://dw-${local.environment}-public-certificates/ca_certificates/ucfs/ucd_clientca.pem"
   ]
 
-}
-
-resource "null_resource" "no_op" {
-  // TODO: remove me
 }
