restore local user
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/terraform/deploy/terraform.tfvars.j2
+++ b/terraform/deploy/terraform.tfvars.j2
@@ -10,6 +10,7 @@ concourse_web_config = {
   database_password = "{{database_password}}"
   enterprise_github_url = "{{enterprise_github_url}}"
   concourse_user = "{{concourse_user}}"
+  concourse_password = "{{concourse_password}}"
   enterprise_github_oauth_client_id = "{{enterprise_github_oauth_client_id}}"
   enterprise_github_oauth_client_secret = "{{enterprise_github_oauth_client_secret}}"
   session_signing_key = <<-EOF
