Fix update-ami-secrets job, replace hardcode with bootstrap
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -159,7 +159,7 @@ locals {
 
   no_proxy = "${join(",", module.vpc.outputs.no_proxy_list)},${var.concourse_web_config.enterprise_github_url}"
 
-  ami_id = local.environment == "management" ? "ami-05c376e3e23319d73" : "ami-0a43b07f9f26c8cd2"
+  ami_id = local.environment == "management" ? var.concourse_ami : var.concourse_ami_mgmt_dev
 
   enterprise_github_certs = [
     "s3://dw-${local.environment}-public-certificates/ca_certificates/ucfs/ucd_ca.pem",
