remove incorrect endpoint service.  Attempt to fix WAF rules
Signed-off-by: Chris Scott-Thomas <chrisscott-thomas@digital.uc.dwp.gov.uk>

--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -119,6 +119,8 @@ locals {
 
   whitelist_cidr_blocks = [ for v in local.full_cidr_blocks : v if replace(v, ":", "") == v ]
 
+  github_hooks = [for v in local.github_metadata.hooks : v if replace(v, ":", "") == v]
+
   account = { {% for key, value in accounts.items() %}
     {{key}} = "{{value}}"{% endfor %}
   }
