Add AP API VPCE to Concourse VPC

--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -172,6 +172,5 @@ locals {
     "s3://dw-${local.environment}-public-certificates/ca_certificates/ucfs/ucd_clientca.pem"
   ]
 
-  ap_api_name = "{{ap.api_name}}"
-  ap_api_vpce = "{{ap.api_vpce}}"
+  api_service_name = "{{ap.api_service_name}}"
 }
