--- a/terraform/deploy/terraform.tfvars.j2
+++ b/terraform/deploy/terraform.tfvars.j2
@@ -2,6 +2,7 @@ assume_role = "administrator"
 parent_domain_name    = "{{dataworks_domain_name}}"
 whitelist_cidr_blocks    = [{% set doiranges = doi["cidr_blocks"].split(',') %}
   {% for cidr in doiranges %}"{{ cidr }}",
+  {% endfor %}{% set sreranges = sre["cidr_blocks"].split(',') %}{% for cidr in sreranges %}"{{ cidr }}",
   {% endfor %}"{{ucfs["team_cidr_block"]}}"
 ]
 
