--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -1,12 +1,13 @@
 terraform {
   required_version = "{{terraform.terraform_14_version}}"
+
   required_providers {
     random = {
-      "~> 2.0"
+      version = "~> 2.0"
     }
 
     tls    = {
-      "~> 2.0"
+      version = "~> 2.0"
     }
 
     aws = {
