--- a/terraform/deploy/terraform.tf.j2
+++ b/terraform/deploy/terraform.tf.j2
@@ -81,6 +81,20 @@ data "terraform_remote_state" "security-tools" {
   }
 }
 
+data "terraform_remote_state" "management" {
+  backend   = "s3"
+  workspace = local.management_infra_account[local.environment]
+
+  config = {
+    bucket         = "{{terraform.state_file_bucket}}"
+    key            = "terraform/dataworks/management.tfstate"
+    region         = "{{terraform.state_file_region}}"
+    encrypt        = true
+    kms_key_id     = "arn:aws:kms:{{terraform.state_file_region}}:{{terraform.state_file_account}}:key/{{terraform.state_file_kms_key}}"
+    dynamodb_table = "remote_state_locks"
+  }
+}
+
 variable "assume_role" {
   default = "ci"
 }
@@ -176,6 +190,16 @@ locals {
 
   account = { {% for key, value in accounts.items() %}
     {{key}} = "{{value}}"{% endfor %}
+  }
+
+  management_infra_account = {
+    development    = "default"
+    qa             = "default"
+    integration    = "default"
+    management-dev = "default"
+    preprod        = "management"
+    production     = "management"
+    management     = "management"
   }
 
   management_account = {
